# jupyter_lab_devcontainer

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
work/: work.ipynb
